added how to run my GUI in readMe.md